--- a/Test.ipynb
+++ b/Test.ipynb
@@ -1,121 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "import os\n",
-    "BASEDIR = os.getcwd()\n",
-    "df = pd.read_csv(os.path.join(BASEDIR,\"app\",\"static\",\"uploads\",\"20230602-183306_washingmachine.csv\"),sep=';')\n",
-    "df['Date'] = pd.to_datetime(df['Date'])\n",
-    "df = df.set_index('Date')\n",
-    "monthly_sum = df['Wh'].resample('M').sum()\n",
-    "monthly_sum.index = monthly_sum.index.strftime('%b')\n",
-    "\n",
-    "labels = monthly_sum.index.to_list()\n",
-    "values = monthly_sum.values.tolist()\n",
-    "\n",
-    "# labels\n",
-    "# values\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "49400.0"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(monthly_sum.values.mean(),2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "395.2"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(monthly_sum.values.sum()*0.008/12,2)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# data"
+    "# Testdaten zum Uploaden erstellen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2014-04-01 00:00:00+01:00    293.061005\n",
-       "2014-04-01 00:00:10+01:00    292.940002\n",
-       "2014-04-01 00:00:20+01:00    291.472015\n",
-       "2014-04-01 00:00:30+01:00    294.808990\n",
-       "2014-04-01 00:00:40+01:00    291.983002\n",
+       "2014-10-08 00:00:00+01:00    142.742004\n",
+       "2014-10-08 00:00:10+01:00    141.654541\n",
+       "2014-10-08 00:00:20+01:00    142.166992\n",
+       "2014-10-08 00:00:30+01:00    146.613327\n",
+       "2014-10-08 00:00:40+01:00    146.849091\n",
        "Freq: 10S, Name: active, dtype: float32"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DATA_PATH = 'C:\\\\Users\\\\stefa\\\\OneDrive - FHWN\\\\Privat\\\\Studium\\\\MIT_2-Semester\\\\case_study\\\\lession1\\\\datasets\\\\ukdale2.h5'\n",
-    "from nilmtk import DataSet\n",
-    "\n",
-    "ukdale = DataSet(DATA_PATH)\n",
-    "ukdale.set_window(start='2014-04-01', end='2014-07-01')\n",
-    "\n",
-    "aggregate = next(ukdale.buildings[1].elec.mains().load(sample_period=10))\n",
-    "aggregate = aggregate['power']['active']\n",
-    "aggregate.head(n=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\stefa\\.conda\\envs\\casestudy2\\lib\\site-packages\\nilmtk\\utils.py:499: UserWarning: Not all resample_kwargs were consumed: {'label': 'right'}\n",
-      "  warnings.warn(\"Not all resample_kwargs were consumed: {}\".format(repr(all_resample_kwargs)))\n"
-     ]
     }
    ],
    "source": [
@@ -123,17 +34,21 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
+    "DATA_PATH = 'C:\\\\Users\\\\stefa\\\\OneDrive - FHWN\\\\Privat\\\\Studium\\\\MIT_2-Semester\\\\case_study\\\\lession1\\\\datasets\\\\ukdale2.h5'\n",
     "building = 5\n",
-    "appliance = 'microwave'\n",
-    "start_time = '2014-10-01'\n",
-    "end_time = '2014-10-02'\n",
+    "start_time = '2014-10-08'\n",
+    "end_time = '2014-10-11'\n",
     "sample_period = 10\n",
     "\n",
-    "\n",
+    "CSVPATH = f'app\\\\static\\\\uploads\\\\mains_{building}_{start_time}_{end_time}.csv'\n",
     "\n",
     "ukdale = nilmtk.DataSet(DATA_PATH)\n",
     "ukdale.set_window(start=start_time, end=end_time)\n",
-    "mains = ukdale.buildings[building].elec.mains().power_series_all_data(sample_period=sample_period, resample_kwargs={'label': 'right'})\n"
+    "main = next(ukdale.buildings[1].elec.mains().load(sample_period=sample_period))\n",
+    "aggregate = main['power']['active']\n",
+    "aggregate.to_csv(CSVPATH,header=False)\n",
+    "aggregate.head(n=5)\n",
+    "\n"
    ]
   },
   {
@@ -164,7 +79,7 @@
     }
    ],
    "source": [
-    "CSVPATH = 'app\\\\static\\\\uploads\\\\mains.csv'\n",
+    "\n",
     "# mains.to_csv('app\\\\static\\\\uploads\\\\mains.csv')\n",
     "type(mains)\n",
     "mains"
