--- a/Test.ipynb
+++ b/Test.ipynb
@@ -10,21 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\stefa\\.conda\\envs\\casestudy2\\lib\\site-packages\\nilmtk\\utils.py:509: UserWarning: Found duplicate index. Keeping first value\n",
+      "  warnings.warn(\"Found duplicate index. Keeping first value\")\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "2014-10-08 00:00:00+01:00    142.742004\n",
-       "2014-10-08 00:00:10+01:00    141.654541\n",
-       "2014-10-08 00:00:20+01:00    142.166992\n",
-       "2014-10-08 00:00:30+01:00    146.613327\n",
-       "2014-10-08 00:00:40+01:00    146.849091\n",
+       "2015-01-01 00:00:00+00:00    139.268997\n",
+       "2015-01-01 00:00:10+00:00    139.268005\n",
+       "2015-01-01 00:00:20+00:00    139.240997\n",
+       "2015-01-01 00:00:30+00:00    139.207993\n",
+       "2015-01-01 00:00:40+00:00    139.272995\n",
        "Freq: 10S, Name: active, dtype: float32"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,9 +43,9 @@
     "import numpy as np\n",
     "\n",
     "DATA_PATH = 'C:\\\\Users\\\\stefa\\\\OneDrive - FHWN\\\\Privat\\\\Studium\\\\MIT_2-Semester\\\\case_study\\\\lession1\\\\datasets\\\\ukdale2.h5'\n",
-    "building = 5\n",
-    "start_time = '2014-10-08'\n",
-    "end_time = '2014-10-11'\n",
+    "building = 1\n",
+    "start_time = '2015-01-01'\n",
+    "end_time = '2017-01-01'\n",
     "sample_period = 10\n",
     "\n",
     "CSVPATH = f'app\\\\static\\\\uploads\\\\mains_{building}_{start_time}_{end_time}.csv'\n",
