--- a/sqlite_test.ipynb
+++ b/sqlite_test.ipynb
@@ -2,26 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import Table, Column, DateTime, Float, Integer, MetaData, create_engine\n",
+    "from sqlalchemy import Table, Column, DateTime, Float, Integer, PrimaryKeyConstraint, MetaData, create_engine \n",
     "\n",
     "# Datenbank erstellen/verbinden\n",
     "engine = create_engine('sqlite:///data.db')\n",
     "metadata = MetaData()\n",
     "\n",
     "# Tabelle definieren\n",
-    "energieverbrauch = Table(\n",
-    "    'powerconsumption', metadata,\n",
-    "    Column('timestamp', DateTime, nullable=False, primary_key=True),\n",
-    "    Column('aggregate', Float, nullable=False),\n",
+    "aggregate = Table(\n",
+    "    'dae', metadata,\n",
+    "    Column('timestamp', DateTime, nullable=False),\n",
+    "    # Column('aggregate', Float, nullable=False),\n",
     "    Column('washingmachine', Float, nullable=False),\n",
     "    Column('fridge', Float, nullable=False),\n",
     "    Column('microwave', Float, nullable=False),\n",
     "    Column('kettle', Float, nullable=False),\n",
     "    Column('user_id', Integer, nullable=False),\n",
+    "\n",
+    "    PrimaryKeyConstraint('timestamp', 'user_id')\n",
     ")\n",
     "\n",
     "# Tabellen erstellen\n",
@@ -30,32 +32,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x241f474cdc0>"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "# df.to_sql('powerconsumption', con=engine, if_exists='replace', index=False, method='upsert')"
+    "query = f\"\"\"\n",
+    "            --DROP TABLE seq2point\n",
+    "            --DROP TABLE seq2seq\n",
+    "            --DROP TABLE aggregate\n",
+    "            DROP TABLE dae\n",
+    "            \"\"\"\n",
+    "engine.execute(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data from table powerconsumption:\n"
-     ]
-    },
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>washingmachine</th>\n",
+       "      <th>fridge</th>\n",
+       "      <th>microwave</th>\n",
+       "      <th>kettle</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [timestamp, washingmachine, fridge, microwave, kettle, user_id]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "query = f\"\"\"\n",
+    "            SELECT *\n",
+    "            FROM dae\n",
+    "            \"\"\"\n",
+    "user_id = 1\n",
+    "# query = f\"\"\"\n",
+    "#         SELECT timestamp, aggregate\n",
+    "#         FROM aggregate a\n",
+    "#         join (select timestamp,washingmachine,microwave,kettle \n",
+    "#                 from seq2point) sp \n",
+    "#                 on a.timestamp = sp.timestamp\n",
+    "#         WHERE user_id = {user_id}\n",
+    "#         \"\"\"\n",
+    "\n",
+    "df = pd.read_sql_query(query, engine)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_14912\\1165105807.py:15: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_10484\\1861582393.py:15: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
       "  table_names = engine.table_names()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data from table aggregate:\n",
+      "Data from table dae:\n",
+      "Data from table powerconsumption:\n",
+      "Data from table seq2point:\n",
+      "Data from table seq2seq:\n"
      ]
     }
    ],
@@ -83,7 +176,8 @@
     "    results = session.execute(query).fetchall()\n",
     "    print(f\"Data from table {table_name}:\")\n",
     "    for result in results:\n",
-    "        print(result)\n",
+    "        # print(result)\n",
+    "        pass\n",
     "\n",
     "# Schließen der Session\n",
     "session.close()"
@@ -153,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +272,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>timestamp</th>\n",
+       "      <th>washingmachine</th>\n",
+       "      <th>fridge</th>\n",
        "      <th>microwave</th>\n",
+       "      <th>kettle</th>\n",
+       "      <th>user_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -188,23 +286,37 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [timestamp, microwave]\n",
+       "Columns: [timestamp, washingmachine, fridge, microwave, kettle, user_id]\n",
        "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "\n",
+    "#     Column('washingmachine', Float, nullable=False),\n",
+    "#     Column('fridge', Float, nullable=False),\n",
+    "#     Column('microwave', Float, nullable=False),\n",
+    "#     Column('kettle', Float, nullable=False),\n",
     "\n",
     "query = f\"\"\"\n",
-    "            SELECT timestamp,{appliance}\n",
-    "            FROM powerconsumption \n",
-    "            WHERE user_id = {user_id}\n",
+    "            SELECT *\n",
+    "            FROM seq2point\n",
     "            \"\"\"\n",
+    "user_id = 1\n",
+    "# query = f\"\"\"\n",
+    "#         SELECT timestamp, aggregate\n",
+    "#         FROM aggregate a\n",
+    "#         join (select timestamp,washingmachine,microwave,kettle \n",
+    "#                 from seq2point) sp \n",
+    "#                 on a.timestamp = sp.timestamp\n",
+    "#         WHERE user_id = {user_id}\n",
+    "#         \"\"\"\n",
+    "\n",
     "\n",
     "df = pd.read_sql_query(query, engine)\n",
     "df\n",
@@ -230,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -310,6 +422,9 @@
       "(46, 21, 27)\n",
       "(47, 22, 27)\n",
       "(48, 23, 27)\n",
+      "(49, 3, 32)\n",
+      "(50, 4, 32)\n",
+      "(51, 8, 32)\n",
       "Data from table ab_permission_view_role:\n",
       "(1, 1, 1)\n",
       "(2, 2, 1)\n",
@@ -359,14 +474,23 @@
       "(46, 46, 1)\n",
       "(47, 47, 1)\n",
       "(48, 48, 1)\n",
+      "(49, 49, 1)\n",
+      "(50, 50, 1)\n",
+      "(51, 51, 1)\n",
       "Data from table ab_register_user:\n",
       "Data from table ab_role:\n",
       "(1, 'Admin')\n",
       "(2, 'Public')\n",
       "Data from table ab_user:\n",
-      "(1, 'admin', 'admin', 'admin', 'pbkdf2:sha256:260000$vB1ZZPG1QDBcy1Zl$e2fa28fc3d9bde386ef227dd5a838a073242445b0dff38c3fe29e06892b3c51c', True, 'admin@gmail.com', datetime.datetime(2023, 6, 5, 18, 40, 0, 218012), 25, 0, datetime.datetime(2023, 5, 15, 11, 32, 7, 87439), datetime.datetime(2023, 5, 15, 11, 32, 7, 87446), None, None)\n",
+      "(1, 'admin', 'admin', 'admin', 'pbkdf2:sha256:260000$vB1ZZPG1QDBcy1Zl$e2fa28fc3d9bde386ef227dd5a838a073242445b0dff38c3fe29e06892b3c51c', True, 'admin@gmail.com', datetime.datetime(2023, 6, 14, 19, 58, 49, 771678), 31, 0, datetime.datetime(2023, 5, 15, 11, 32, 7, 87439), datetime.datetime(2023, 5, 15, 11, 32, 7, 87446), None, None)\n",
+      "(2, 'testfirstname2', 'testlastname2', 'testuser2', 'pbkdf2:sha256:260000$PQWObn8bKsUESsXo$c7102d92918cf793293f5271cf42389667ed86e7b612a22567cfc1a6b01812ca', True, 'testuser2@gmail.com', None, None, None, datetime.datetime(2023, 6, 9, 11, 25, 32, 494478), datetime.datetime(2023, 6, 9, 11, 25, 32, 494478), None, None)\n",
+      "(3, 'testfirstname', 'testlastname', 'testuser', 'pbkdf2:sha256:260000$ym2Pkrrpb0utRAgF$43ec61bfa3b23a1e99b134d67336630ab2440a237b01721ebfe1d1e070352f3f', True, 'sis51569@omeie.com', datetime.datetime(2023, 6, 11, 9, 2, 7, 497507), 2, 0, datetime.datetime(2023, 6, 9, 11, 25, 40, 498402), datetime.datetime(2023, 6, 9, 11, 25, 40, 498402), None, None)\n",
+      "(4, 'Stefan', 'Dimnik', 'Stefan', 'pbkdf2:sha256:600000$BPsAbcSCjvC78bp1$1ad40d86872d5bb19a1733df70b475b911717d0dfd9aac6c0476a2c300ea3583', True, 'stefan@a.com', datetime.datetime(2023, 6, 14, 19, 57, 42, 313412), 1, 0, datetime.datetime(2023, 6, 14, 19, 57, 29, 603743), datetime.datetime(2023, 6, 14, 19, 57, 29, 603743), None, None)\n",
       "Data from table ab_user_role:\n",
       "(1, 1, 1)\n",
+      "(2, 2, 2)\n",
+      "(3, 3, 2)\n",
+      "(4, 4, 2)\n",
       "Data from table ab_view_menu:\n",
       "(1, 'IndexView')\n",
       "(2, 'UtilView')\n",
@@ -397,14 +521,17 @@
       "(27, 'Home')\n",
       "(28, '/')\n",
       "(29, '')\n",
-      "(30, 'MyIndexView')\n"
+      "(30, 'MyIndexView')\n",
+      "(31, 'RegisterUserDBView')\n",
+      "(32, 'RegisterUserModelView')\n",
+      "(33, 'MyRegisterUserDBView')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_13176\\2455109047.py:15: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
+      "C:\\Users\\stefa\\AppData\\Local\\Temp\\ipykernel_10484\\2455109047.py:15: SADeprecationWarning: The Engine.table_names() method is deprecated and will be removed in a future release.  Please refer to Inspector.get_table_names(). (deprecated since: 1.4)\n",
       "  table_names = engine.table_names()\n"
      ]
     }
@@ -437,6 +564,29 @@
     "\n",
     "# Schließen der Session\n",
     "session.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Stefan Dimnik'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id = 4\n",
+    "query = f'''select first_name, last_name from ab_user where id = {id}'''\n",
+    "name = engine.execute(query).fetchall()[0]\n",
+    "f'{name[0]} {name[1]}'"
    ]
   }
  ],
