--- a/creat_testdata.ipynb
+++ b/creat_testdata.ipynb
@@ -2,21 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2014-10-15 00:00:00+01:00    157.539001\n",
-       "2014-10-15 00:00:10+01:00    159.354004\n",
-       "2014-10-15 00:00:20+01:00    165.098999\n",
-       "2014-10-15 00:00:30+01:00    166.899002\n",
-       "2014-10-15 00:00:40+01:00    163.246002\n",
-       "Freq: 10S, Name: active, dtype: float32"
+       "2023-04-15 00:00:00+01:00    2514.305908\n",
+       "2023-04-15 00:00:10+01:00    2514.761963\n",
+       "2023-04-15 00:00:20+01:00    2516.089111\n",
+       "2023-04-15 00:00:30+01:00    2518.035156\n",
+       "2023-04-15 00:00:40+01:00    2519.340088\n",
+       "                                ...     \n",
+       "2023-04-29 23:59:10+01:00     270.151001\n",
+       "2023-04-29 23:59:20+01:00     270.214996\n",
+       "2023-04-29 23:59:30+01:00     270.742981\n",
+       "2023-04-29 23:59:40+01:00     271.509003\n",
+       "2023-04-29 23:59:50+01:00     271.177002\n",
+       "Name: active, Length: 129600, dtype: float32"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,23 +31,37 @@
     "import nilmtk\n",
     "import os\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "DATA_PATH = 'C:\\\\Users\\\\stefa\\\\OneDrive - FHWN\\\\Privat\\\\Studium\\\\MIT_2-Semester\\\\case_study\\\\lession1\\\\datasets\\\\ukdale2.h5'\n",
     "building = 5\n",
-    "start_time = '2014-10-15'\n",
-    "end_time = '2014-10-18'\n",
     "sample_period = 10\n",
+    "add_years = 7\n",
     "\n",
-    "CSVPATH = f'app\\\\static\\\\uploads\\\\mains_{building}_{start_time}_{end_time}.csv'\n",
+    "start_time = '2016-04-15'\n",
+    "end_time = '2016-04-30'\n",
+    "\n",
+    "start = start_time.replace('2016-','2023-')\n",
+    "end = end_time.replace('2016-','2023-')\n",
+    "\n",
+    "CSVPATH = f'app\\\\static\\\\uploads\\\\test\\\\mains_{building}_{start}_{end}.csv'\n",
     "\n",
     "ukdale = nilmtk.DataSet(DATA_PATH)\n",
     "ukdale.set_window(start=start_time, end=end_time)\n",
     "main = next(ukdale.buildings[1].elec.mains().load(sample_period=sample_period))\n",
+    "main.index = main.index + pd.DateOffset(years=add_years)\n",
     "aggregate = main['power']['active']\n",
+    "\n",
     "aggregate.to_csv(CSVPATH,header=False)\n",
-    "aggregate.head(n=5)\n",
-    "\n"
+    "aggregate#.head(n=5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
